--- a/examples/c/CMakeLists.txt
+++ b/examples/c/CMakeLists.txt
@@ -2,4 +2,4 @@ include_directories(${CMAKE_SOURCE_DIR}/include)
 
 add_executable(ismrmrd_c_demo main.c)
 target_link_libraries(ismrmrd_c_demo ismrmrd)
-install(TARGETS ismrmrd_c_demo DESTINATION bin COMPONENT utils)
+install(TARGETS ismrmrd_c_demo DESTINATION bin)
