--- a/utilities/CMakeLists.txt
+++ b/utilities/CMakeLists.txt
@@ -6,18 +6,18 @@ include_directories(${CMAKE_BINARY_DIR}/include
 
 add_executable(ismrmrd_info ismrmrd_info.cpp)
 target_link_libraries(ismrmrd_info ismrmrd)
-install(TARGETS ismrmrd_info DESTINATION bin COMPONENT utils)
+install(TARGETS ismrmrd_info DESTINATION bin)
 
 add_executable(ismrmrd_read_timing_test read_timing_test.cpp)
 target_link_libraries(ismrmrd_read_timing_test ismrmrd)
-install(TARGETS ismrmrd_read_timing_test DESTINATION bin COMPONENT utils)
+install(TARGETS ismrmrd_read_timing_test DESTINATION bin)
 
 if (NOT WIN32)
   add_executable(ismrmrd_test_xml 
     ismrmrd_test_xml.cpp 
     ${CMAKE_SOURCE_DIR}/libsrc/pugixml.cpp )
   target_link_libraries(ismrmrd_test_xml ismrmrd)
-  install(TARGETS ismrmrd_test_xml DESTINATION bin COMPONENT utils)
+  install(TARGETS ismrmrd_test_xml DESTINATION bin)
 endif(NOT WIN32)
 
 find_package(Boost 1.43 COMPONENTS program_options)
@@ -49,7 +49,7 @@ if(FFTW3_FOUND AND Boost_FOUND)
             ${Boost_PROGRAM_OPTIONS_LIBRARY}
             ${FFTW3_LIBRARIES})
     endif(WIN32)
-    install(TARGETS ismrmrd_generate_cartesian_shepp_logan DESTINATION bin COMPONENT utils)
+    install(TARGETS ismrmrd_generate_cartesian_shepp_logan DESTINATION bin)
 
     # Shepp-Logan phantom
     add_executable(ismrmrd_recon_cartesian_2d
@@ -64,7 +64,7 @@ if(FFTW3_FOUND AND Boost_FOUND)
             ${Boost_PROGRAM_OPTIONS_LIBRARY}
             ${FFTW3_LIBRARIES})
     endif(WIN32)
-    install(TARGETS ismrmrd_recon_cartesian_2d DESTINATION bin COMPONENT utils)
+    install(TARGETS ismrmrd_recon_cartesian_2d DESTINATION bin)
 
 else(FFTW3_FOUND AND Boost_FOUND)
 	message("FFTW3 or Boost NOT Found, cannot build utilities")
