--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,9 +1,9 @@
 find_package(Boost 1.43 COMPONENTS unit_test_framework)
 
-if (NOT Boost_FOUND)
+if (NOT Boost_UNIT_TEST_FRAMEWORK_FOUND)
     message("Boost Unit Test Framework not found. Not compiling tests")
     return()
-endif (NOT Boost_FOUND)
+endif (NOT Boost_UNIT_TEST_FRAMEWORK_FOUND)
 
 include_directories(${CMAKE_SOURCE_DIR}/include ${CMAKE_BINARY_DIR}/include)
 
