--- a/include/version.in
+++ b/include/version.in
@@ -6,5 +6,6 @@
 #define ISMRMRD_VERSION_PATCH @ISMRMRD_VERSION_PATCH@
 #define ISMRMRD_XMLHDR_VERSION @ISMRMRD_VERSION_MINOR@
 #define ISMRMRD_GIT_SHA1_HASH "@ISMRMRD_GIT_SHA1@"
+#define ISMRMRD_DATASET_SUPPORT @ISMRMRD_DATASET_SUPPORT@
 
 #endif /* ISMRMRD_VERSION_H */
