--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,32 @@
+sudo: false
+
 language: cpp
 
 compiler:
-    - gcc
-    - clang
+  - gcc
+  - clang
 
-before_install:
-    - sudo apt-get update
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+      - llvm-toolchain-precise-3.6
+      - boost-latest
+    packages:
+      - cmake
+      - gcc-4.9
+      - g++-4.9
+      - clang-3.6
+      - libboost1.55-all-dev
+      - libhdf5-serial-dev
+
 install:
-    - sudo apt-get install libboost-all-dev libhdf5-serial-dev h5utils doxygen
+  - if [ "$CXX" = "g++" ]; then export CXX="g++-4.9" CC="gcc-4.9"; fi
+  - if [ "$CXX" = "clang++" ]; then export CXX="clang++-3.6" CC="clang-3.6"; fi
 
 before_script:
-    - mkdir build
-    - cd build
-    - cmake ..
+  - mkdir build
+  - cd build
+  - cmake ..
 
 script: make && make check
