updating utilities to work with C++ API (not compiling)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,12 +92,12 @@ set(ISMRMRD_VERSION_STRING ${ISMRMRD_VERSION_MAJOR}.${ISMRMRD_VERSION_MINOR}.${I
 set(ISMRMRD_SOVERSION ${ISMRMRD_VERSION_MAJOR}.${ISMRMRD_VERSION_MINOR})
 
 # Find HDF5 for dataset support
-find_package(HDF5 1.8 COMPONENTS C)
+find_package(HDF5 1.8 COMPONENTS C CXX)
 
 if (HDF5_FOUND)
     set (ISMRMRD_DATASET_SUPPORT true)
-    set (ISMRMRD_DATASET_SOURCES libsrc/dataset.c libsrc/dataset.cpp)
-    set (ISMRMRD_DATASET_INCLUDE_DIR ${HDF5_C_INCLUDE_DIR})
+    set (ISMRMRD_DATASET_SOURCES libsrc/dataset.cpp)
+    set (ISMRMRD_DATASET_INCLUDE_DIRS ${HDF5_INCLUDE_DIR} ${HDF5_INCLUDE_DIR}/cpp)
     set (ISMRMRD_DATASET_LIBRARIES ${HDF5_LIBRARIES})
 else (HDF5_FOUND)
     set (ISMRMRD_DATASET_SUPPORT false)
@@ -141,15 +141,14 @@ endif (HDF5_FOUND AND WIN32 AND ISMRMRD_INSTALL_DEPENDENCIES)
 set(ISMRMRD_TARGET_INCLUDE_DIRS
   include
   ${CMAKE_BINARY_DIR}/include
-  ${ISMRMRD_DATASET_INCLUDE_DIR}
+  ${ISMRMRD_DATASET_INCLUDE_DIRS}
 )
 
 set(ISMRMRD_TARGET_SOURCES
-  #libsrc/ismrmrd.c
   libsrc/ismrmrd.cpp
   libsrc/xml.cpp
   libsrc/meta.cpp
-  #${ISMRMRD_DATASET_SOURCES}
+  ${ISMRMRD_DATASET_SOURCES}
 )
 
 set(ISMRMRD_TARGET_LINK_LIBS ${ISMRMRD_DATASET_LIBRARIES})
