stubbing out C++ API and decomissioning C API (don't use)
compiling but the HDF5 stuff isn't implemented

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,6 +1,4 @@
-find_package(HDF5 1.8 COMPONENTS C)
-
 if (HDF5_FOUND)
-    add_subdirectory(c)
+    #add_subdirectory(c)
     add_subdirectory(protocol)
 endif (HDF5_FOUND)
