STYLE: Convert CMake-language commands to lower case
Ancient CMake versions required upper-case commands.  Later command
names became case-insensitive.  Now the preferred style is lower-case.

Run the following shell code:
NOTE: MUST USE GNU compliant version of sed

cmake --help-command-list \
| grep -v "cmake version" \
| while read c; do
    echo 's/\b'"$(echo $c | tr '[:lower:]' '[:upper:]')"'\(\s*\)(/'"$c"'\1(/g'
  done >convert.sed \
&& git ls-files -z -- bootstrap '*.cmake' '*.cmake.in' '*CMakeLists.txt' \
   | xargs -0 gsed -i -f convert.sed \
&& rm convert.sed

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -10,7 +10,7 @@ if(DOXYGEN_FOUND)
         COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYFILE}
         COMMENT "Generating API documentation using Doxygen" VERBATIM)
 else(DOXYGEN_FOUND)
-    MESSAGE(STATUS "Doxygen not found. Not able to build API documentation")
+    message(STATUS "Doxygen not found. Not able to build API documentation")
 endif(DOXYGEN_FOUND)
 
 find_program(SPHINXBUILD sphinx-build)
@@ -31,7 +31,7 @@ if(SPHINXBUILD)
             COMMENT "Generating HTML docs using Sphinx" VERBATIM)
     endif(WIN32)
 else(SPHINXBUILD)
-    MESSAGE(STATUS "sphinx-build not found. Not able to build HTML project documentation")
+    message(STATUS "sphinx-build not found. Not able to build HTML project documentation")
 endif(SPHINXBUILD)
 
 add_custom_target(doc)
